// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workday Ignore improperly formatted records from customreports v6 stream 1`] = `
Array [
  "Processed 4 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":4}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 14 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":1,\\\\\\"geo_Location\\\\\\":1,\\\\\\"identity_Identity\\\\\\":3,\\\\\\"org_Employee\\\\\\":3,\\\\\\"org_Team\\\\\\":3,\\\\\\"org_TeamMembership\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday Randomly generated records from customreports v4 stream with Terminated 1`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 327 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":4,\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":102,\\\\\\"org_Employee\\\\\\":102,\\\\\\"org_Team\\\\\\":13,\\\\\\"org_TeamMembership\\\\\\":102}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday Saved and Ignored structured generated records v4 stream 1`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 267 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":4,\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":83,\\\\\\"org_Employee\\\\\\":83,\\\\\\"org_Team\\\\\\":10,\\\\\\"org_TeamMembership\\\\\\":83}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday Saved and Ignored structured generated records v4 stream 2`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 267 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":4,\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":83,\\\\\\"org_Employee\\\\\\":83,\\\\\\"org_Team\\\\\\":10,\\\\\\"org_TeamMembership\\\\\\":83}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday check resulting org structure from "empty" input 1`] = `
Object {
  "all_teams": "all_teams",
}
`;

exports[`workday process randomly generated records from customreports v3 stream 1`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 318 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":4,\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":102,\\\\\\"org_Employee\\\\\\":102,\\\\\\"org_Team\\\\\\":4,\\\\\\"org_TeamMembership\\\\\\":102}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday process randomly generated records from many records stream 1`] = `
Array [
  "Processed 104 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":104}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 322 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":4,\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":103,\\\\\\"org_Employee\\\\\\":103,\\\\\\"org_Team\\\\\\":5,\\\\\\"org_TeamMembership\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday process records from customreports v1 stream accept all - geocoded 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 17 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":2,\\\\\\"geo_Coordinates\\\\\\":2,\\\\\\"geo_Location\\\\\\":2,\\\\\\"identity_Identity\\\\\\":3,\\\\\\"org_Employee\\\\\\":3,\\\\\\"org_Team\\\\\\":2,\\\\\\"org_TeamMembership\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday process records from customreports v1 stream accept all - geocoded 2`] = `
Array [
  Object {
    "org_Team": Object {
      "lead": Object {
        "uid": "002",
      },
      "name": "Team B",
      "parentTeam": Object {
        "uid": "A",
      },
      "source": "workday",
      "uid": "B",
    },
  },
  Object {
    "org_Team": Object {
      "lead": Object {
        "uid": "003",
      },
      "name": "Team A",
      "parentTeam": Object {
        "uid": "all_teams",
      },
      "source": "workday",
      "uid": "A",
    },
  },
  Object {
    "org_Employee": Object {
      "employmentType": null,
      "identity": Object {
        "uid": "001",
      },
      "inactive": false,
      "joinedAt": "2019-03-29T12:07:39.730Z",
      "location": Object {
        "uid": "Connecticut",
      },
      "manager": Object {
        "uid": "002",
      },
      "source": "workday",
      "terminatedAt": null,
      "title": null,
      "uid": "001",
    },
  },
  Object {
    "identity_Identity": Object {
      "emails": Array [
        "asmith@co.co",
      ],
      "fullName": "A Smith",
      "primaryEmail": "asmith@co.co",
      "source": "workday",
      "uid": "001",
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "001",
      },
      "source": "workday",
      "team": Object {
        "uid": "B",
      },
    },
  },
  Object {
    "org_Employee": Object {
      "employmentType": null,
      "identity": Object {
        "uid": "002",
      },
      "inactive": false,
      "joinedAt": "2021-08-14T09:24:16.027Z",
      "location": Object {
        "uid": "Connecticut",
      },
      "manager": Object {
        "uid": "003",
      },
      "source": "workday",
      "terminatedAt": null,
      "title": null,
      "uid": "002",
    },
  },
  Object {
    "identity_Identity": Object {
      "emails": Array [
        "bsmith@co.co",
      ],
      "fullName": "B Smith",
      "primaryEmail": "bsmith@co.co",
      "source": "workday",
      "uid": "002",
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "002",
      },
      "source": "workday",
      "team": Object {
        "uid": "A",
      },
    },
  },
  Object {
    "org_Employee": Object {
      "employmentType": null,
      "identity": Object {
        "uid": "004",
      },
      "inactive": false,
      "joinedAt": "2018-11-21T22:18:43.511Z",
      "location": Object {
        "uid": "Alabama",
      },
      "manager": Object {
        "uid": "002",
      },
      "source": "workday",
      "terminatedAt": null,
      "title": null,
      "uid": "004",
    },
  },
  Object {
    "identity_Identity": Object {
      "emails": Array [
        "dsmith@co.co",
      ],
      "fullName": "D Smith",
      "primaryEmail": "dsmith@co.co",
      "source": "workday",
      "uid": "004",
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "004",
      },
      "source": "workday",
      "team": Object {
        "uid": "B",
      },
    },
  },
  Object {
    "geo_Address": Object {
      "city": null,
      "country": "United States",
      "countryCode": "US",
      "fullAddress": "Connecticut, USA",
      "houseNumber": null,
      "postalCode": null,
      "source": "workday",
      "state": "Connecticut",
      "stateCode": "CT",
      "street": null,
      "uid": "ChIJpVER8hFT5okR5XBhBVttmq4",
      "unit": null,
    },
  },
  Object {
    "geo_Coordinates": Object {
      "lat": 41.6032207,
      "lon": -73.087749,
      "source": "workday",
    },
  },
  Object {
    "geo_Location": Object {
      "address": Object {
        "uid": "ChIJpVER8hFT5okR5XBhBVttmq4",
      },
      "coordinates": Object {
        "lat": 41.6032207,
        "lon": -73.087749,
      },
      "raw": "Connecticut",
      "source": "workday",
      "uid": "Connecticut",
    },
  },
  Object {
    "geo_Address": Object {
      "city": null,
      "country": "United States",
      "countryCode": "US",
      "fullAddress": "Alabama, USA",
      "houseNumber": null,
      "postalCode": null,
      "source": "workday",
      "state": "Alabama",
      "stateCode": "AL",
      "street": null,
      "uid": "ChIJdf5LHzR_hogR6czIUzU0VV4",
      "unit": null,
    },
  },
  Object {
    "geo_Coordinates": Object {
      "lat": 32.3182314,
      "lon": -86.902298,
      "source": "workday",
    },
  },
  Object {
    "geo_Location": Object {
      "address": Object {
        "uid": "ChIJdf5LHzR_hogR6czIUzU0VV4",
      },
      "coordinates": Object {
        "lat": 32.3182314,
        "lon": -86.902298,
      },
      "raw": "Alabama",
      "source": "workday",
      "uid": "Alabama",
    },
  },
]
`;

exports[`workday process records from customreports v1 stream accept all 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 15 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":2,\\\\\\"geo_Location\\\\\\":2,\\\\\\"identity_Identity\\\\\\":3,\\\\\\"org_Employee\\\\\\":3,\\\\\\"org_Team\\\\\\":2,\\\\\\"org_TeamMembership\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday process records from customreports v1 stream accept all 2`] = `
Array [
  Object {
    "org_Team": Object {
      "lead": Object {
        "uid": "002",
      },
      "name": "Team B",
      "parentTeam": Object {
        "uid": "A",
      },
      "source": "workday",
      "uid": "B",
    },
  },
  Object {
    "org_Team": Object {
      "lead": Object {
        "uid": "003",
      },
      "name": "Team A",
      "parentTeam": Object {
        "uid": "all_teams",
      },
      "source": "workday",
      "uid": "A",
    },
  },
  Object {
    "org_Employee": Object {
      "employmentType": null,
      "identity": Object {
        "uid": "001",
      },
      "inactive": false,
      "joinedAt": "2019-03-29T12:07:39.730Z",
      "location": Object {
        "uid": "Connecticut",
      },
      "manager": Object {
        "uid": "002",
      },
      "source": "workday",
      "terminatedAt": null,
      "title": null,
      "uid": "001",
    },
  },
  Object {
    "identity_Identity": Object {
      "emails": Array [
        "asmith@co.co",
      ],
      "fullName": "A Smith",
      "primaryEmail": "asmith@co.co",
      "source": "workday",
      "uid": "001",
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "001",
      },
      "source": "workday",
      "team": Object {
        "uid": "B",
      },
    },
  },
  Object {
    "org_Employee": Object {
      "employmentType": null,
      "identity": Object {
        "uid": "002",
      },
      "inactive": false,
      "joinedAt": "2021-08-14T09:24:16.027Z",
      "location": Object {
        "uid": "Connecticut",
      },
      "manager": Object {
        "uid": "003",
      },
      "source": "workday",
      "terminatedAt": null,
      "title": null,
      "uid": "002",
    },
  },
  Object {
    "identity_Identity": Object {
      "emails": Array [
        "bsmith@co.co",
      ],
      "fullName": "B Smith",
      "primaryEmail": "bsmith@co.co",
      "source": "workday",
      "uid": "002",
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "002",
      },
      "source": "workday",
      "team": Object {
        "uid": "A",
      },
    },
  },
  Object {
    "org_Employee": Object {
      "employmentType": null,
      "identity": Object {
        "uid": "004",
      },
      "inactive": false,
      "joinedAt": "2018-11-21T22:18:43.511Z",
      "location": Object {
        "uid": "Alabama",
      },
      "manager": Object {
        "uid": "002",
      },
      "source": "workday",
      "terminatedAt": null,
      "title": null,
      "uid": "004",
    },
  },
  Object {
    "identity_Identity": Object {
      "emails": Array [
        "dsmith@co.co",
      ],
      "fullName": "D Smith",
      "primaryEmail": "dsmith@co.co",
      "source": "workday",
      "uid": "004",
    },
  },
  Object {
    "org_TeamMembership": Object {
      "member": Object {
        "uid": "004",
      },
      "source": "workday",
      "team": Object {
        "uid": "B",
      },
    },
  },
  Object {
    "geo_Address": Object {
      "fullAddress": "Connecticut",
      "source": "workday",
      "uid": "Connecticut",
    },
  },
  Object {
    "geo_Location": Object {
      "address": Object {
        "uid": "Connecticut",
      },
      "coordinates": null,
      "raw": "Connecticut",
      "source": "workday",
      "uid": "Connecticut",
    },
  },
  Object {
    "geo_Address": Object {
      "fullAddress": "Alabama",
      "source": "workday",
      "uid": "Alabama",
    },
  },
  Object {
    "geo_Location": Object {
      "address": Object {
        "uid": "Alabama",
      },
      "coordinates": null,
      "raw": "Alabama",
      "source": "workday",
      "uid": "Alabama",
    },
  },
]
`;

exports[`workday process records from customreports v1 stream reject all 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":3}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 0 records",
  "Would write records by model: {}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`workday process structured generated records from customreports v4 stream 1`] = `
Array [
  "Processed 103 records",
  "Processed records by stream: {\\\\\\"mytestsource__workday__customreports\\\\\\":103}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 324 records",
  "Would write records by model: {\\\\\\"geo_Address\\\\\\":4,\\\\\\"geo_Location\\\\\\":4,\\\\\\"identity_Identity\\\\\\":101,\\\\\\"org_Employee\\\\\\":101,\\\\\\"org_Team\\\\\\":13,\\\\\\"org_TeamMembership\\\\\\":101}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;
